--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello
+<!DOCTYPE html>
+<html lang="fa">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="وبسایت رسمی جاوید ایران - اخبار و خدمات ويژه" />
+        <meta name="author" content="پویا کاظمی" />
+        <title>جاوید ایران</title>
+        <link rel="icon" type="image/png" href="/favicon.png" />
+        
+        
+          <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
+          <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+          <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css" rel="stylesheet"/>
+  </head>
+
+
+  <body>
+
+
+
+        <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
+  </body>
+
+</html>
