--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!--DOCTYPE html>
 <html lang="fa">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="وبسایت رسمی جاوید ایران - اخبار و خدمات ويژه" />
+        <meta name="description" content="وبسایت رسمی جاوید ایران - اخبار و خدمات ويژه" /><
         <meta name="author" content="پویا کاظمی" />
         <title>جاوید ایران</title>
         <link rel="icon" type="image/png" href="favicon.png" />
